--- a/cluster/config/hosts.ini
+++ b/cluster/config/hosts.ini
@@ -7,13 +7,13 @@
 # ## good idea to set this variable to the IP address(es) non-reachable from the
 # ## outside.
 
-# single.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
-# master-01.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
-# master-02.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
-# master-03.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
-# worker-01.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.14  # ip=172.16.1.14
-# worker-02.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.15  # ip=172.16.1.15
-# worker-03.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.16  # ip=172.16.1.16
+# single.nfv-k8s.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
+# master-01.nfv-k8s.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
+# master-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
+# master-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
+# worker-01.nfv-k8s.example.net ansible_ssh_host=192.168.1.14  # ip=172.16.1.14
+# worker-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.15  # ip=172.16.1.15
+# worker-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.16  # ip=172.16.1.16
 
 # ## Configure a bastion host if your nodes are not directly reachable.
 # bastion ansible_ssh_host=x.x.x.x ansible_user=xxxxx
@@ -24,22 +24,22 @@ ansible_connection=ssh
 ansible_ssh_user=xxxxx
 
 [kube-master]
-# single.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
-# master-01.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
-# master-02.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
-# master-03.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
+# single.nfv-k8s.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
+# master-01.nfv-k8s.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
+# master-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
+# master-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
 
 [etcd]
-# single.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
-# master-01.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
-# master-02.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
-# master-03.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
+# single.nfv-k8s.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
+# master-01.nfv-k8s.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
+# master-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
+# master-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
 
 [kube-node]
-# single.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
-# worker-01.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.14  # ip=172.16.1.14
-# worker-02.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.15  # ip=172.16.1.15
-# worker-03.nfv-k8s-01.example.net ansible_ssh_host=192.168.1.16  # ip=172.16.1.16
+# single.nfv-k8s.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
+# worker-01.nfv-k8s.example.net ansible_ssh_host=192.168.1.14  # ip=172.16.1.14
+# worker-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.15  # ip=172.16.1.15
+# worker-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.16  # ip=172.16.1.16
 
 [k8s-cluster:children]
 kube-master
