Simplify sample hosts.ini file

--- a/config/hosts.ini
+++ b/config/hosts.ini
@@ -25,21 +25,15 @@ ansible_ssh_user=xxxxx
 
 [kube-master]
 # single.nfv-k8s.example.net
-# master-01.nfv-k8s.example.net
-# master-02.nfv-k8s.example.net
-# master-03.nfv-k8s.example.net
+# master-[01:03].nfv-k8s.example.net
 
 [etcd]
 # single.nfv-k8s.example.net
-# master-01.nfv-k8s.example.net
-# master-02.nfv-k8s.example.net
-# master-03.nfv-k8s.example.net
+# master-[01:03].nfv-k8s.example.net
 
 [kube-node]
 # single.nfv-k8s.example.net
-# worker-01.nfv-k8s.example.net
-# worker-02.nfv-k8s.example.net
-# worker-03.nfv-k8s.example.net
+# worker-[01:03].nfv-k8s.example.net
 
 [k8s-cluster:children]
 kube-master
