Add ability to use bastion host when accessing nodes

--- a/config/hosts.ini
+++ b/config/hosts.ini
@@ -15,13 +15,12 @@
 # worker-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.15  # ip=172.16.1.15
 # worker-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.16  # ip=172.16.1.16
 
-# ## Configure a bastion host if your nodes are not directly reachable.
-# bastion ansible_ssh_host=x.x.x.x ansible_user=xxxxx
-
 # ## Configure ssh connection to your nodes.
 [all:vars]
 ansible_connection=ssh
 ansible_ssh_user=xxxxx
+# ## Use the bastion host if your nodes are not directly reachable.
+# ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -o StrictHostKeyChecking=no -q tpiadmin@217.92.147.146 -p 2274 -i /root/.ssh/key"'
 
 [kube-master]
 # single.nfv-k8s.example.net
