--- a/ansible/rook-clean-up.yml
+++ b/ansible/rook-clean-up.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: kube-node
   tasks:
-  - name: "Rook clean up"
+  - name: Rook clean up
     file:
       path: /var/lib/rook/
       state: absent
