--- a/config/group_vars/k8s-cluster.yml
+++ b/config/group_vars/k8s-cluster.yml
@@ -157,7 +157,7 @@ k8s_image_pull_policy: IfNotPresent
 
 # Kubernetes dashboard
 # RBAC required. see docs/getting-started.md for access details.
-dashboard_enabled: true
+dashboard_enabled: false
 
 # Monitoring apps for k8s
 efk_enabled: false
