--- a/components/loadbalancer/metallb-config.yaml
+++ b/components/loadbalancer/metallb-config.yaml
@@ -6,7 +6,11 @@ metadata:
 data:
   config: |
     address-pools:
-    - name: default
+    - name: pool1
+      protocol: layer2
+      addresses:
+      - 192.168.1.100-192.168.1.150
+    - name: pool2
       protocol: layer2
       addresses:
       - 192.168.1.200-192.168.1.250
