--- a/ansible/disable-swap.yml
+++ b/ansible/disable-swap.yml
@@ -2,10 +2,11 @@
 - hosts: all
   tasks:
   - name: Remove swapfile from /etc/fstab
-    mount:
-      name: swap
-      fstype: swap
-      state: absent
+    replace:
+      path: /etc/fstab
+      regexp: '^(\s*)([^#\n]+\s+)(\w+\s+)swap(\s+.*)$'
+      replace: '#\1\2\3swap\4'
+      backup: yes
   - name: Disable swap
     command: swapoff -a
     when: ansible_swaptotal_mb > 0
