--- a/config/group_vars/k8s-cluster.yml
+++ b/config/group_vars/k8s-cluster.yml
@@ -117,7 +117,7 @@ kube_encrypt_secret_data: true
 
 # DNS configuration.
 # Kubernetes cluster name, also will be used as DNS domain
-cluster_name: nfv-k8s.example.net
+cluster_name: cennsonic.example.net
 # Subdomains of DNS domain to be resolved via /etc/resolv.conf for hostnet pods
 ndots: 2
 # Can be dnsmasq_kubedns, kubedns, coredns, coredns_dual, manual or none
