--- a/config/hosts.ini
+++ b/config/hosts.ini
@@ -7,32 +7,32 @@
 # ## good idea to set this variable to the IP address(es) non-reachable from the
 # ## outside.
 
-# single.nfv-k8s.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
-# master-01.nfv-k8s.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
-# master-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
-# master-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
-# worker-01.nfv-k8s.example.net ansible_ssh_host=192.168.1.14  # ip=172.16.1.14
-# worker-02.nfv-k8s.example.net ansible_ssh_host=192.168.1.15  # ip=172.16.1.15
-# worker-03.nfv-k8s.example.net ansible_ssh_host=192.168.1.16  # ip=172.16.1.16
+# single.cennsonic.example.net ansible_ssh_host=192.168.1.10  # ip=172.16.1.10
+# master-01.cennsonic.example.net ansible_ssh_host=192.168.1.11  # ip=172.16.1.11
+# master-02.cennsonic.example.net ansible_ssh_host=192.168.1.12  # ip=172.16.1.12
+# master-03.cennsonic.example.net ansible_ssh_host=192.168.1.13  # ip=172.16.1.13
+# worker-01.cennsonic.example.net ansible_ssh_host=192.168.1.14  # ip=172.16.1.14
+# worker-02.cennsonic.example.net ansible_ssh_host=192.168.1.15  # ip=172.16.1.15
+# worker-03.cennsonic.example.net ansible_ssh_host=192.168.1.16  # ip=172.16.1.16
 
 # ## Configure ssh connection to your nodes.
 [all:vars]
 ansible_connection=ssh
 ansible_ssh_user=xxxxx
 # ## Use the bastion host if your nodes are not directly reachable.
-# ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -o StrictHostKeyChecking=no -q tpiadmin@217.92.147.146 -p 2274 -i /root/.ssh/key"'
+# ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -o StrictHostKeyChecking=no -q User@Host -p Port -i /root/.ssh/key"'
 
 [kube-master]
-# single.nfv-k8s.example.net
-# master-[01:03].nfv-k8s.example.net
+# single.cennsonic.example.net
+# master-[01:03].cennsonic.example.net
 
 [etcd]
-# single.nfv-k8s.example.net
-# master-[01:03].nfv-k8s.example.net
+# single.cennsonic.example.net
+# master-[01:03].cennsonic.example.net
 
 [kube-node]
-# single.nfv-k8s.example.net
-# worker-[01:03].nfv-k8s.example.net
+# single.cennsonic.example.net
+# worker-[01:03].cennsonic.example.net
 
 [k8s-cluster:children]
 kube-master
