--- a/config/group_vars/all.yml
+++ b/config/group_vars/all.yml
@@ -1,14 +1,16 @@
 ### SSH public keys to provision to all the nodes
-### A key will be downloaded from "https://gitlab.tpip.net/{{ user }}.keys"
+### A key will be downloaded from "{{ user_key_link }}.keys"
+### assuming user keylink is somewhat like "https://github.com/username"
 #ssh_keys:
-#- user1
-#- user2
+#- user_key_link1
+#- user_key_link2
 
 ### SSH public keys to delete from all the nodes
-### A key will be compared to "https://gitlab.tpip.net/{{ user }}.keys"
+### A key will be compared to "{{ user_key_link }}.keys"
+### assuming user keylink is somewhat like "https://github.com/username"
 #no_ssh_keys
-#- user3
-#- user4
+#- user_key_link3
+#- user_key_link4
 
 # Valid bootstrap options (required): ubuntu, coreos, centos, none
 bootstrap_os: ubuntu
