--- a/config/hosts.ini
+++ b/config/hosts.ini
@@ -18,9 +18,11 @@
 # ## Configure ssh connection to your nodes.
 [all:vars]
 ansible_connection=ssh
-ansible_ssh_user=xxxxx
+ansible_ssh_user=core
 # ## Use the bastion host if your nodes are not directly reachable.
 # ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -o StrictHostKeyChecking=no -q User@Host -p Port -i /root/.ssh/key"'
+# ## configure a bastion host if your nodes are not directly reachable
+# bastion ansible_host=x.x.x.x ansible_user=some_user
 
 [kube-master]
 # single.cennsonic.example.net
