--- a/config/kubeadm-config.yaml
+++ b/config/kubeadm-config.yaml
@@ -2,9 +2,9 @@ apiVersion: kubeadm.k8s.io/v1alpha3
 kind: ClusterConfiguration
 kubernetesVersion: __K8S_VERSION__
 apiServerCertSANs:
-- "k8s.__CLUSTER__"
+- "__LB_HOSTNAME__"
 - "__LB_IP__"
-controlPlaneEndpoint: "k8s.__CLUSTER__:6443"
+controlPlaneEndpoint: "__LB_HOSTNAME__:6443"
 etcd:
   local:
     extraArgs:
