Multus CNI explicitly bound to worker nodes

--- a/manifests/multus-cni.yaml
+++ b/manifests/multus-cni.yaml
@@ -30,6 +30,8 @@ spec:
       labels:
         app: multus-cni
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/worker: "true"
       tolerations:
       - key: node.kubernetes.io/not-ready
         effect: NoSchedule
