--- a/config/group_vars/all.yml
+++ b/config/group_vars/all.yml
@@ -1,19 +1,19 @@
 ### SSH public keys to provision to all the nodes
-### A key will be downloaded from "{{ user_key_link }}.keys"
-### assuming a "user_key_link" is somewhat like "https://github.com/username"
+### A key will be downloaded from "{{ user_key_link }}"
+### assuming a "user_key_link" is somewhat like "https://github.com/username.keys"
 #ssh_keys:
 #- user_key_link1
 #- user_key_link2
 
 ### SSH public keys to delete from all the nodes
-### A key will be compared to "{{ user_key_link }}.keys"
-### assuming a "user_key_link" is somewhat like "https://github.com/username"
-#no_ssh_keys
+### A key will be compared to "{{ user_key_link }}"
+### assuming a "user_key_link" is somewhat like "https://github.com/username.keys"
+#no_ssh_keys:
 #- user_key_link3
 #- user_key_link4
 
 # Valid bootstrap options (required): ubuntu, coreos, centos, none
-bootstrap_os: coreos
+bootstrap_os: ubuntu
 
 #Directory where etcd data stored
 etcd_data_dir: /var/lib/etcd
