--- a/config/hosts.ini
+++ b/config/hosts.ini
@@ -18,7 +18,7 @@
 # ## Configure ssh connection to your nodes.
 [all:vars]
 ansible_connection=ssh
-ansible_ssh_user=core
+ansible_ssh_user=ubuntu
 # ## Use the bastion host if your nodes are not directly reachable.
 # ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -o StrictHostKeyChecking=no -q User@Host -p Port -i /root/.ssh/key"'
 # ## configure a bastion host if your nodes are not directly reachable
