--- a/config/group_vars/k8s-cluster.yml
+++ b/config/group_vars/k8s-cluster.yml
@@ -222,7 +222,7 @@ cert_manager_enabled: false
 persistent_volumes_enabled: false
 
 # Make a copy of kubeconfig on the host that runs Ansible in {{ inventory_dir }}/artifacts
-kubeconfig_localhost: true
+# kubeconfig_localhost: false
 # Download kubectl onto the host that runs Ansible in {{ bin_dir }}
 # kubectl_localhost: false
 
