--- a/manifests/calico.yaml
+++ b/manifests/calico.yaml
@@ -32,6 +32,9 @@ data:
             "type": "host-local",
             "subnet": "usePodCidr"
           },
+          "container_settings": {
+            "allow_ip_forwarding": true
+          },
           "policy": {
             "type": "k8s"
           },
