--- a/components/network/calico-etcd-sync.yaml
+++ b/components/network/calico-etcd-sync.yaml
@@ -59,7 +59,9 @@ data:
             -e "s~__ETCD_CA_CERT_FILE__~${EtcdCaCertFile}~" \
             -e "s~__KUBECONFIG_FILEPATH__~${KubeconfigFilePath}~" \
             |
-            tee /host/etc/cni/net.d/10-calico.conflist
+            tee /tmp/10-calico.conflist
+
+    mv /tmp/10-calico.conflist /host/etc/cni/net.d/10-calico.conflist
 ---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
