--- a/components/network/calico-etcd-rbac.yaml
+++ b/components/network/calico-etcd-rbac.yaml
@@ -1,5 +1,5 @@
-# Calico Version v3.1.4
-# https://docs.projectcalico.org/v3.1/releases#v3.1.4
+# Calico Version v3.3.2
+# https://docs.projectcalico.org/v3.3/releases#v3.3.2
 
 ---
 
@@ -16,6 +16,7 @@ rules:
       - namespaces
       - networkpolicies
       - nodes
+      - serviceaccounts
     verbs:
       - watch
       - list
@@ -51,8 +52,14 @@ rules:
     resources:
       - pods
       - nodes
+      - namespaces
     verbs:
       - get
+  - apiGroups: [""]
+    resources:
+      - nodes/status
+    verbs:
+      - patch
 
 ---
 
