kube-node: node role label values are empty instead of true
Fixes kubeadm upgrade process

--- a/components/network/multus-cni.yaml
+++ b/components/network/multus-cni.yaml
@@ -90,7 +90,7 @@ spec:
         app: multus-cni-node
     spec:
       nodeSelector:
-        node-role.kubernetes.io/worker: "true"
+        node-role.kubernetes.io/worker: ""
       tolerations:
       - key: node.kubernetes.io/not-ready
         effect: NoSchedule
