--- a/config/kubeadm.yaml
+++ b/config/kubeadm.yaml
@@ -25,6 +25,8 @@ networking:
 ---
 kind: InitConfiguration
 apiVersion: kubeadm.k8s.io/v1alpha3
+apiEndpoint:
+  advertiseAddress: "_NODE_IP_"
 ---
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
