kube: run vxlan controller on a worker node only

--- a/kube/manifests/network/kube-vxlan-controller.yaml
+++ b/kube/manifests/network/kube-vxlan-controller.yaml
@@ -54,6 +54,8 @@ spec:
       labels:
         run: kube-vxlan-controller
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/worker: ""
       containers:
       - name: kube-vxlan-controller
         image: openvnf/kube-vxlan-controller:0.10.3
