--- a/kube/manifests/network/calico-etcd-sync.yaml
+++ b/kube/manifests/network/calico-etcd-sync.yaml
@@ -1,3 +1,5 @@
+# Calico Sync Version 0.2.0
+
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -75,6 +77,8 @@ spec:
   selector:
     matchLabels:
       app: calico-etcd-sync
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -86,7 +90,7 @@ spec:
         effect: "NoSchedule"
       containers:
       - name: calico-etcd-sync
-        image: quay.io/travelping/kube-watch:0.3.1
+        image: quay.io/travelping/kube-watch:0.4.0
         imagePullPolicy: Always
         command:
         - calico-etcd-sync-watch
