--- a/kube/manifests/config/kubeadm.yaml
+++ b/kube/manifests/config/kubeadm.yaml
@@ -20,8 +20,8 @@ etcd:
     - "_NODE_HOSTNAME_"
     - "_NODE_IP_"
 networking:
-    podSubnet: "10.233.64.0/18"
-    serviceSubnet: "10.233.0.0/18"
+    podSubnet: "_POD_SUBNET_"
+    serviceSubnet: "_SERVICE_SUBNET_"
 ---
 kind: InitConfiguration
 apiVersion: kubeadm.k8s.io/v1alpha3
@@ -31,4 +31,4 @@ apiEndpoint:
 apiVersion: kubelet.config.k8s.io/v1beta1
 kind: KubeletConfiguration
 clusterDNS:
-- "10.233.0.10"
+- "_CLUSTER_DNS_"
