--- a/kube/manifests/network/calico-etcd-config.yaml
+++ b/kube/manifests/network/calico-etcd-config.yaml
@@ -43,7 +43,7 @@ data:
               "type": "calico-ipam",
               "assign_ipv4": "true",
               "assign_ipv6": "true",
-              "ipv4_pools": ["10.233.64.0/18"]
+              "ipv4_pools": ["_POD_SUBNET_"]
           },
           "container_settings": {
               "allow_ip_forwarding": true
