--- a/kube/manifests/network/calico-etcd.yaml
+++ b/kube/manifests/network/calico-etcd.yaml
@@ -149,7 +149,7 @@ spec:
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
             - name: CALICO_IPV4POOL_CIDR
-              value: "10.233.64.0/18"
+              value: "_POD_SUBNET_"
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
